--- a/website/templates/website/nav.html
+++ b/website/templates/website/nav.html
@@ -113,6 +113,11 @@
                 Pending Bookings
               </a>
             </li>
+            <li>
+              <a class="dropdown-item" href="{% url 'booking_report' %}">
+                Booking Report
+              </a>
+            </li>
           {% endif %}
 
 
